--- a/css/style.css
+++ b/css/style.css
@@ -6,32 +6,28 @@ height: 100%;
 width:100%;
 }
 
-#sepTopBar{
-    width: 100%;
-    height:1px;
-    position:absolute;
-    top: 120px;
-    border-bottom: 1px solid #CCC;
+body{
+	background: url('images/ticks.png');
 }
 
-#startBar{
+.sepBar{
+	height:1px;
 	width: 100%;
-    height:10px;
-    position:absolute;
-    top: 2px;
-
+	background: #CCC;
+	border-bottom: 1px solid #ECECEC;
 }
 
 #wrap {
     height: 100%;
     width: 100%;
-    background: #FEFEFE;
 	position: relative;
 }
 #page{
 	padding: 20px 60px;
 	position: relative;
-	height: 50%;
+	height: 65%;
+	width: 70%;
+	margin: auto;
 }
 
 #banner {
@@ -49,7 +45,7 @@ width:100%;
 }
 #mainTitle{
     position: absolute;
-    left: 145px;
+    left: 20px;
     top: 50px;
     text-shadow: -1px 0 2px #FFF;
 	font-size: 36px;
@@ -57,35 +53,8 @@ width:100%;
 	line-height: 35px;
 }
 
-#content{
-	position: relative;
-	height: 100%;
-	padding: 60px 10px;
-	border: 1px solid #000;
-}
-
-#banner ul {
-    margin: 0;
-    padding: 0;
-    float:right;
-    z-index: 1;
-    position: relative;
-	background: url("../images/binding_dark.png");
-}
-#banner ul li {
-    text-decoration: none;
-    list-style-type: none;
-    display: block;
-    float: left;
-    padding: 15px 5px 0 5px;
-    width: 100px;
-    position: relative;
-    text-align:center;
-    color: #FFF;
-
-}
 #nav {
-    padding: 0 10px 10px 10px;
+    padding: 0;
     overflow: auto;
     height: 30px;
     z-index: 1;
@@ -94,7 +63,7 @@ width:100%;
 	bottom: 0;
 }
 #nav ul {
-    margin: 0;
+    margin: 0 20px;
     padding: 0;
     float:right;
     z-index: 1;
@@ -105,31 +74,90 @@ width:100%;
 	text-decoration: none;
     list-style-type: none;
 	margin: 2px 30px;
+	width: 45px;
+	height: 20px;
 }
-.ribbon {
-    background: rgba(255,255,255,0);
+#nav a{
+	text-decoration: none;
+	color: #000;
+}
+#underLine{
+	height: 6px;
+	width: 45px;
+	background-color: #6DA7B5;
+	padding: 0 30px;
+	position: absolute;
+	bottom: 0;
+	left: 20px;/*20 for first li*/
+				/*132 for second*/
+}
 
-    border-radius: 2px 2px 0 0;
-    box-shadow: 5px 0 0  rgba(255,255,255,0), -5px 0 0  rgba(255,255,255,0);
-    height: 160px;
-    margin: 0 10px;
-    position: relative;
-    -webkit-filter: drop-shadow(0px 1px 1px hsla(0, 0%, 0%, .5));
+#leftBanner{
+	height: 100%;
+	width: 75px;
+	position: absolute;
+	background: url('images/tweed.png');
+	left: 50px;
 }
-.ribbon:after, .ribbon:before {
-    border-top: 15px rgba(255,255,255,0);
-    content:'';
-    height: 0;
-    position: absolute;
-    top: 100%;
-    width: 0;
+#leftBannerOverlay{
+	height: 100%;
+	width: 75px;
+	position: absolute;
+	background-color: rgba(0,175,0,.3);
+	left: 50px;
+	box-shadow: 0 0 2px #444;
 }
-.ribbon:after {
-    border-left: 60px solid transparent;
-    right: -5px;
+#leftBannerOverlay2{
+	height: 100%;
+	width: 65px;
+	position: absolute;
+	left: 54px;
+	border-left: 1px dashed #444;
+	border-right: 1px dashed #444;
 }
-.ribbon:before {
-    border-right: 60px solid transparent;
-    left: -5px;
+
+.hide{
+	display: none;
 }
+
+.content{
+	margin: 5px 0;
+	position: relative;
+	height: 100%;
+	padding: 0;
+}
+
+.content div{
+	box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;
+	padding: 1px;
+}
+
+.content .eachContent{
+	background-color: rgba(0,0,0,.1);
+}
+
+.fullByfull{
+	float: left;
+	height: 100%;
+	width: 50%;
+}
+.fullByhalf{
+	float: left;
+	height: 50%;
+	width: 50%;
+}
+.halfByhalf{
+	float: left;
+	height: 50%;
+	width: 25%;
+}
+/*half by half with slant border*/
+.hByhWithSlant{
+	
+}
+.eachContent{
+	height: 100%;
+	width: 100%;
+}
+
 
